# get_clocked

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  refstore.toml
.github/workflows/: ci.yml  release.yml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  components.rs  lib.rs
frontend/src/pages/: category_manager.rs  home.rs  mod.rs  register_workday.rs  settings.rs  template_maker.rs
shared/: Cargo.toml
shared/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: categories.rs  dialog.rs  export.rs  main.rs  settings.rs  templates.rs
