[package]
name = "get-clocked"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = "0.5"
dwind = "0.7"
dwind-macros = "0.4"
futures-signals = "0.3"
tauri-wasm = { version = "0.2", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
get-clocked-shared = { path = "../shared" }
web-sys = { version = "0.3", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
    "Navigator",
    "Clipboard",
    "Window",
] }
