[package]
name = "get-clocked-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "get-clocked"
path = "src/main.rs"
