[package]
name = "get-clocked-tauri"
version = "0.1.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_xlsxwriter = "0"
csv = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "get-clocked"
path = "src/main.rs"
